Исправления недочетов на страницах

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="features">
                   <div class="features-one">
                       <b class="features-name">Настоящий городок</b>
-                      <p><span class="features-number">-№1-</span></p>
+                      <span class="features-number">-№1-</span>
                       <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
                   </div>
                   <div class="pictures">
@@ -74,8 +74,8 @@
                       <img src="#" alt="">
                   </div>
                   <div class="features-two">
-                      <b class="features-name">Там есть мост дьявола</b>
-                      <p><span class="features-number">-№2-</span></p>
+                      <b class="features-name">Там есть <br> мост дьявола</b>
+                      <span class="features-number">-№2-</span>
                       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
                   </div>
               </div>
@@ -87,12 +87,12 @@
                   </div>
                   <div class="features-four">
                       <b class="features-name">Красивая дорога</b>
-                      <p><span class="features-number">-№4-</span></p>
+                      <span class="features-number">-№4-</span>
                       <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                   </div>
                   <div class="features-five">
                       <b class="features-name">Мало туристов</b>
-                      <p><span class="features-number">-№5-</span></p>
+                      <span class="features-number">-№5-</span>
                       <p>Большинство едет в Гранд Каньон и толпится там</p>
                   </div>
               </div>
@@ -103,19 +103,19 @@
                   <p>Укажите предполагаемые даты, ..в Седоне</p>
               </div>
           <div class="search">
-              <h3 class="search-title">Поиск гостиницы в Седоне</h3>
               <form class="search-form" action="#" method="get">
+                  <a class="search-title" href="#">Поиск гостиницы в Седоне</a>
                   <label>
-                      Дата заезда <input type="text" name="date" value="">
+                      Дата заезда <input type="text" name="date-arrival" value="arrival">
                   </label>
                   <label>
-                      Дата выезда <input type="text" name="date" value="">
+                      Дата выезда <input type="text" name="date-departure" value="departure">
                   </label>
                   <label>
-                      Взрослые <input type="text" name="total" value="">
+                      Взрослые <input type="text" name="total-adults" value="adults">
                   </label>
                   <label>
-                      Дети <input type="text" name="total" value="">
+                      Дети <input type="text" name="total-children" value="children">
                   </label>
                   <input type="submit" value="Найти">
               </form>
