--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       <img src="#" alt="">
                   </div>
                   <div class="features-two">
-                      <b class="features-name">Там есть <br> мост дьявола</b>
+                      <b class="features-name">Там есть мост дьявола</b>
                       <span class="features-number">-№2-</span>
                       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
                   </div>
@@ -82,7 +82,7 @@
               <div class="features">
                   <div class="features-three">
                       <b class="features-name">Небольшая площадь</b>
-                      <p><span class="features-number">-№3-</span></p>
+                      <span class="features-number">-№3-</span>
                       <p>Все достопримечательности находятся очень близко</p>
                   </div>
                   <div class="features-four">
@@ -100,11 +100,11 @@
                   <div class="interest-title">
                       <b class="interest-name">Заинтересовались?</b>          
                   </div>
-                  <p>Укажите предполагаемые даты, ..в Седоне</p>
+                  <p>Укажите предполагаемые даты, и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+                  <a class="interest-search" href="#">Поиск гостиницы в Седоне</a>
               </div>
           <div class="search">
               <form class="search-form" action="#" method="get">
-                  <a class="search-title" href="#">Поиск гостиницы в Седоне</a>
                   <label>
                       Дата заезда <input type="text" name="date-arrival" value="arrival">
                   </label>
