--- a/index-container.html
+++ b/index-container.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
       <header class="main-header">
@@ -78,7 +79,7 @@
           
           <div class="find-hotel">
               <div class="catalog-hotel">
-                  <img src="#" alt="Amara resort spa">
+                  <img src="img/%25D0%25BE%25D1%2581%25D0%25BD%2520%25D0%25BA%25D0%25B0%25D1%2580%25D1%2582%25D0%25B8%25D0%25BD%25D1%258B/%D0%BE%D1%82%D0%B5%D0%BB%D0%B8%20Amara.jpg" width="135" height="90" alt="Amara resort spa">
                   <h2 class="hotel-title">Amara resort spa</h2>
                   <p>Гостиница</p>
                   <p>от 4000 р.</p>
@@ -88,7 +89,7 @@
                   
               </div>
               <div class="catalog-hotel">
-                  <img src="#" alt="Desert">
+                  <img src="img/%25D0%25BE%25D1%2581%25D0%25BD%2520%25D0%25BA%25D0%25B0%25D1%2580%25D1%2582%25D0%25B8%25D0%25BD%25D1%258B/%D0%BE%D1%82%D0%B5%D0%BB%D0%B8%20Desert.jpg" width="135" height="90" alt="Desert">
                   <h2 class="hotel-title">Desert Qual Inn</h2>
                   <p>Мотель</p>
                   <p>от 3000 р.</p>
@@ -97,7 +98,7 @@
                   <span class="hotel-rating">Рейтинг:8.9</span>
               </div>
               <div class="catalog-hotel">
-                  <img src="#" alt="Villas">
+                  <img src="img/%25D0%25BE%25D1%2581%25D0%25BD%2520%25D0%25BA%25D0%25B0%25D1%2580%25D1%2582%25D0%25B8%25D0%25BD%25D1%258B/%D0%BE%D1%82%D0%B5%D0%BB%D0%B8%20Villas.jpg" width="135" height="90" alt="Villas">
                   <h2 class="hotel-title">Villas</h2>
                   <p>Апартаменты</p>
                   <p>от 2000 р.</p>
