--- a/index.html
+++ b/index.html
@@ -45,33 +45,33 @@
               <p>Рассмотрим 5 причин, по которому Седона круче, чем Гранд Каньон!</p>
             </div>
               
-              <div class="features">
+              <div class="features1 clearfix">
                   <div class="features-one">
                       <b class="features-name">Настоящий городок</b>
                       <span class="features-number">-№1-</span>
                       <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
                   </div>
-                  <div class="pictures">
+                  <div class="pictures1">
                       <img src="img/main_pictures/gallery1.jpg" width="800" height="256" alt="Настоящий городок"> 
                   </div>
               </div>
-              <section class="info-tourist">
-                  <div class="info-tourist-item">
+              <section class="info-tourist clearfix">
+                  <div class="info-tourist-home">
                       <h2 class="info-tourist-title">Жилье</h2>
                       <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                   </div>
-                  <div class="info-tourist-item">
+                  <div class="info-tourist-food">
                       <h2 class="info-tourist-title">Еда</h2>
                       <p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
                   </div>
-                  <div class="info-tourist-item">
+                  <div class="info-tourist-souvenirs">
                       <h2 class="info-tourist-title">Сувениры</h2>
                       <p>Не только китайского, но и местного производства!</p>
                   </div>
               </section>
               
-              <div class="features">
-                  <div class="pictures">
+              <div class="features2 clearfix ">
+                  <div class="pictures2">
                       <img src="img/main_pictures/gallery2.jpg" width="800" height="256" alt="Мост дьявола">
                   </div>
                   <div class="features-two">
@@ -80,7 +80,7 @@
                       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
                   </div>
               </div>
-              <div class="features">
+              <div class="features clearfix">
                   <div class="features-three">
                       <b class="features-name">Небольшая площадь</b>
                       <span class="features-number">-№3-</span>
