--- a/index-container.html
+++ b/index-container.html
@@ -129,7 +129,9 @@
                   <a class="footer-social-youtube" href="#">Youtube</a>
               </div>
               <div class="footer-copyright">
-                  <span class="site">website by</span> <a href="https://htmlacademy.ru/intensive/htmlcss"></a>
+                  <span class="site">website by</span> <a href="https://htmlacademy.ru/intensive/htmlcss">
+                  <img src="img/decor/logo%20html.png" width="113" height="39" alt="htmlacademy">
+                  </a>
               </div>
           </div>
           </footer>
