--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
               </div>
               <div class="footer-copyright">
                   <span class="site">website by</span> <a href="https://htmlacademy.ru/intensive/htmlcss">
-                  <img src="img/decor/logo%20html.png" width="113" height="39"> </a>
+                  <img src="img/decor/logo%20html.png" width="113" height="39" alt="htmlacademy">
+                  </a>
               </div>
           </footer>
       </div>
