Исправления по сетка (вариант последний)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link href="css/style.css" rel="stylesheet">
+      <link rel="stylesheet" href="css/normalize.css">
+      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
       <div class="container">
@@ -23,11 +24,13 @@
                       <a class="main-right" href="index-container.html">Гостиницы</a>
                   </li>
               </ul>
+              
           </nav>
           <div class="logo">
               <a href="#">
                   <img src="img/decor/logo.png" width="138" height="70" alt="City of sedona"></a>
           </div>
+          
           </header>
 
       <main>
