--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <p>Рассмотрим 5 причин, по которому Седона круче, чем Гранд Каньон!</p>
             </div>
               
-              <div class="features1 clearfix">
+              <div class="features1">
                   <div class="features-one">
                       <b class="features-name">Настоящий городок</b>
                       <span class="features-number">-№1-</span>
@@ -58,7 +58,7 @@
                       <img src="img/main_pictures/gallery1.jpg" width="800" height="256" alt="Настоящий городок"> 
                   </div>
               </div>
-              <section class="info-tourist clearfix">
+              <section class="info-tourist">
 
                   <div class="info-tourist-name">
                       <h2 class="info-tourist-title">Жилье</h2>
@@ -75,7 +75,7 @@
                   </div>
               </section>
               
-              <div class="features2 clearfix ">
+              <div class="features2">
                   <div class="pictures">
                       <img src="img/main_pictures/gallery2.jpg" width="800" height="256" alt="Мост дьявола">
                   </div>
@@ -85,7 +85,7 @@
                       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
                   </div>
               </div>
-              <div class="features clearfix">
+              <div class="features">
                   <div class="features-item">
                       <b class="features-name">Небольшая площадь</b>
                       <span class="features-number">-№3-</span>
