--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <p>Рассмотрим 5 причин, по которому Седона круче, чем Гранд Каньон!</p>
             </div>
               
-              <div class="features1">
+              <div class="features-pic">
                   <div class="features-one">
                       <b class="features-name">Настоящий городок</b>
                       <span class="features-number">-№1-</span>
@@ -75,7 +75,7 @@
                   </div>
               </section>
               
-              <div class="features2">
+              <div class="features-pic">
                   <div class="pictures">
                       <img src="img/main_pictures/gallery2.jpg" width="800" height="256" alt="Мост дьявола">
                   </div>
