незначительные исправления флексов

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
           <div class= "main-picture">
-              <img src="img/main_pictures/welcome_sedonia.jpg" alt="Welcome to the gorgeous Sedona">
+              <img src="img/main_pictures/welcome_sedonia.jpg" width="1200" height="508" alt="Welcome to the gorgeous Sedona">
           </div>
               
           
