--- a/index-container.html
+++ b/index-container.html
@@ -83,10 +83,12 @@
                   </div>
                   <div class="catalog-hotel-name">
                       <h2 class="hotel-title">Amara resort spa</h2>
-                      <p>Гостиница</p>
-                      <p>от 4000 р.</p>
-                      <a class="btn" href="#">Подробнее</a>
-                      <a class="btn" href="#">Забронировать</a>
+                      <div class="hotel-room"><p>Гостиница</p>
+                          <a class="btn" href="#">Подробнее</a>
+                      </div>
+                      <div class="cost-room"><p>от 4000 р.</p>
+                          <a class="btn" href="#">Забронировать</a>
+                      </div>
                   </div>
                   <span class="hotel-rating">Рейтинг:8.5</span>
               </div>
@@ -96,10 +98,13 @@
                   </div>
                   <div class="catalog-hotel-name">
                       <h2 class="hotel-title">Desert Qual Inn</h2>
-                      <p>Мотель</p>
-                      <p>от 3000 р.</p>
-                      <a class="btn" href="#">Подробнее</a>
-                      <a class="btn" href="#">Забронировать</a>
+                      <div class="hotel-room">
+                          <p>Мотель</p>
+                          <a class="btn" href="#">Подробнее</a></div>
+                      <div class="cost-room">
+                          <p>от 3000 р.</p>
+                          <a class="btn" href="#">Забронировать</a>
+                      </div>
                   </div>
                   <span class="hotel-rating">Рейтинг:8.9</span>
               </div>
@@ -109,11 +114,15 @@
                           <img src="img/main_pictures/hotel_Villas.jpg" width="135" height="90" alt="Villas">
                       </div>
                       <div class="catalog-hotel-name">
-                          <h2 class="hotel-title">Villas</h2>
-                          <p>Апартаменты</p>
-                          <p>от 2000 р.</p>
-                          <a class="btn" href="#">Подробнее</a>
-                          <a class="btn" href="#">Забронировать</a>
+                          <h2 class="hotel-title">Villas at poclo diablo</h2>
+                          <div class="hotel-room">
+                              <p>Апартаменты</p>
+                              <a class="btn" href="#">Подробнее</a>
+                          </div>
+                          <div class="cost-room">
+                              <p>от 2000 р.</p>
+                              <a class="btn" href="#">Забронировать</a>
+                          </div>
                       </div>
                       <span class="hotel-rating">Рейтинг:9.2</span>
               </div>
