--- a/index-container.html
+++ b/index-container.html
@@ -81,12 +81,16 @@
               </form>
               </div>  
           <div class="result">
-              <h2>Найдено:3</h2>
+              <h2>Найдено: 3</h2>
               <div class="result-sort">
                   <p class="result-sort-title">Сортировка:</p>
-                  <a class="result-sort-type" href="#">По цене</a>
+                  <span class="result-sort-type active">По цене</span>
                   <a class="result-sort-type" href="#">По типу</a>
                   <a class="result-sort-type" href="#">По рейтингу</a>
+              </div>
+              <div class="arrows-btn">
+                  <a class="arrows arrows-down" href="#"></a>
+                  <a class=" arrows arrows-up" href="#"></a>
               </div>
           </div>
           
@@ -96,7 +100,7 @@
                       <img src="img/main_pictures/hotel_Amara.jpg" width="135" height="90" alt="Amara resort spa">
                   </div>
                   <div class="catalog-hotel-name">
-                      <h2 class="hotel-title">Amara resort spa</h2>
+                      <h2 class="hotel-title">Amara resort & spa</h2>
                       <div class="hotel-room"><p>Гостиница</p>
                           <a class="btn" href="#">Подробнее</a>
                       </div>
@@ -104,7 +108,7 @@
                           <a class="btn" href="#">Забронировать</a>
                       </div>
                   </div>
-                  <div class="hotel-rating">
+                  <div class="hotel-rating amara">
                   <span>Рейтинг: 8.5</span></div>
               </div>
               <div class="catalog-hotel">
@@ -121,7 +125,7 @@
                           <a class="btn" href="#">Забронировать</a>
                       </div>
                   </div>
-                  <div class="hotel-rating">
+                  <div class="hotel-rating desert">
                   <span>Рейтинг: 8.9</span></div>
               </div>
               
@@ -130,7 +134,7 @@
                           <img src="img/main_pictures/hotel_Villas.jpg" width="135" height="90" alt="Villas">
                       </div>
                       <div class="catalog-hotel-name">
-                          <h2 class="hotel-title">Villas at poclo diablo</h2>
+                          <h2 class="hotel-title">Villas at poco diablo</h2>
                           <div class="hotel-room">
                               <p>Апартаменты</p>
                               <a class="btn" href="#">Подробнее</a>
@@ -140,13 +144,14 @@
                               <a class="btn" href="#">Забронировать</a>
                           </div>
                       </div>
-                      <div class="hotel-rating">
+                      <div class="hotel-rating villas">
                   <span>Рейтинг: 9.2
 </span></div>
               </div>
           </div>
      </main>
-      <footer class="main-footer">
+      <footer class="main-footer
+                     hotel">
           <div class="footer-name">
               <div class="footer-insta">
                   <a href="#">#VISITSEDONA</a>
