помехи в форме поиска

--- a/index-container.html
+++ b/index-container.html
@@ -89,8 +89,9 @@
                   <a class="result-sort-type" href="#">По рейтингу</a>
               </div>
               <div class="arrows-btn">
-                  <a class="arrows arrows-down" href="#"></a>
                   <a class=" arrows arrows-up" href="#"></a>
+                  <a class="arrows arrows-down active" href="#"></a>
+                  
               </div>
           </div>
           
@@ -116,7 +117,7 @@
                       <img src="img/main_pictures/hotel_Desert.jpg" width="135" height="90" alt="Desert">
                   </div>
                   <div class="catalog-hotel-name">
-                      <h2 class="hotel-title">Desert Qual Inn</h2>
+                      <h2 class="hotel-title">Desert Quail Inn</h2>
                       <div class="hotel-room">
                           <p>Мотель</p>
                           <a class="btn" href="#">Подробнее</a></div>
