завершение верстки (оформление контента)
изменила блок футера, поставила тени

--- a/index-container.html
+++ b/index-container.html
@@ -35,7 +35,7 @@
       </header>
       <main class="hotels">
           <div class="search-hotel">
-              <form  action="#" method="get"> 
+              <form  action="https://echo.htmlacademy.ru/" method="get"> 
                   <div class="structure"><span class="search-hotel-title">Инфраструктура:</span>
                       <input type="checkbox" name="pool" checked id="b1">
                       <label for="b1">Бассейн
@@ -151,8 +151,7 @@
               </div>
           </div>
      </main>
-      <footer class="main-footer
-                     hotel">
+      <footer class="main-footer hotel">
           <div class="footer-name">
               <div class="footer-insta">
                   <a href="#">#VISITSEDONA</a>
