--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           
             <div class="info">
               <div class="info-city">
-                  <strong class="info-name">Седона-небольшой городок в Аризоне,<br> заслуживающий большего!</strong>
+                  <strong class="info-name">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</strong>
               </div>
               <p>Рассмотрим 5 причин, по которому Седона круче, чем Гранд Каньон!</p>
             </div>
@@ -116,7 +116,7 @@
           <div class= "map">
             <div class="search">
 
-              <form class="search-form" action="#" method="get">
+              <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
                   <div class="search-data">
                       <label for="dz">Дата заезда 
                       </label>
