--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               <div class="features-pic">
                   <div class="features-one">
                       <b class="features-name">Настоящий городок</b>
-                      <span class="features-number">&mdash;№1&mdash;</span>
-                      <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
+                      <span class="features-number">&mdash; №1 &mdash;</span>
+                      <p>Седона &mdash; не аттракцион для туристов, там течет своя жизнь</p>
                   </div>
                   <div class="pictures">
                       <img src="img/main_pictures/gallery1.jpg" width="800" height="256" alt="Настоящий городок"> 
@@ -83,24 +83,24 @@
                   </div>
                   <div class="features-two">
                       <b class="features-name">Там есть мост&nbsp;дьявола</b>
-                      <span class="features-number">&mdash;№2&mdash;</span>
-                      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                      <span class="features-number">&mdash; №2 &mdash;</span>
+                      <p>Да, по нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
                   </div>
               </div>
               <div class="features">
                   <div class="features-item">
                       <b class="features-name">Небольшая площадь</b>
-                      <span class="features-number">&mdash;№3&mdash;</span>
+                      <span class="features-number">&mdash; №3 &mdash;</span>
                       <p>Все достопримечательности находятся&nbsp;очень близко</p>
                   </div>
                   <div class="features-item">
                       <b class="features-name">Красивая дорога</b>
-                      <span class="features-number">&mdash;№4&mdash;</span>
+                      <span class="features-number">&mdash; №4 &mdash;</span>
                       <p>Ехать в Седону из Лас-Вегаса совсем не&nbsp;скучно!</p>
                   </div>
                   <div class="features-item">
                       <b class="features-name">Мало туристов</b>
-                      <span class="features-number">&mdash;№5&mdash;</span>
+                      <span class="features-number">&mdash; №5 &mdash;</span>
                       <p>Большинство едет в Гранд Каньон и толпится там</p>
                   </div>
               </div>
@@ -114,7 +114,7 @@
               </div>
         
           <div class= "map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d836875.2072877929!2d-112.083943603125!3d34.98056814070208!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1494008243405" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d836875.2072877929!2d-112.083943603125!3d34.98056814070208!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1494008243405" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
             <div class="search">
 
               <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
