--- a/index-container.html
+++ b/index-container.html
@@ -84,7 +84,7 @@
               <h2>Найдено: 3</h2>
               <div class="result-sort">
                   <p class="result-sort-title">Сортировка:</p>
-                  <span class="result-sort-type active">По цене</span>
+                  <a class="result-sort-type active">По цене</a>
                   <a class="result-sort-type" href="#">По типу</a>
                   <a class="result-sort-type" href="#">По рейтингу</a>
               </div>
