--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="info-city">
                   <strong class="info-name">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</strong>
               </div>
-              <p>Рассмотрим 5 причин, по которому Седона круче, чем Гранд Каньон!</p>
+              <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
             </div>
               
               <div class="features-pic">
@@ -109,12 +109,12 @@
                       <b class="interest-name">Заинтересовались?</b>          
                   </div>
 
-                  <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем&nbsp;Вам&nbsp;лучшие предложения гостиниц в Седоне</p>
+                  <p>Укажите предполагаемые даты поездки,<br>и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
                   <a class="interest-search" href="#">Поиск гостиницы в Седоне</a>
               </div>
         
           <div class= "map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d836875.2072877929!2d-112.083943603125!3d34.98056814070208!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1494008243405" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe class="internet-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d836875.2072877929!2d-112.083943603125!3d34.98056814070208!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1494008243405" width="1200" height="593" allowfullscreen></iframe>
             <div class="search">
 
               <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
