--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <header class="main-header">
             <div class="logo">
-                <a href="#">
+                <a>
                     <img src="img/decor/logo.png" width="138" height="70" alt="City of sedona">
                 </a>
             </div>
@@ -29,7 +29,7 @@
                         <a class="main-right" href="#">Карта штата</a>
                     </li>
                     <li>
-                        <a class="main-right" href="index-container.html">Гостиницы</a>
+                        <a class="main-right" href="catalogue.html">Гостиницы</a>
                     </li>
                 </ul>
             </nav>
@@ -112,29 +112,29 @@
                             <label for="dz">Дата заезда:
                             </label>
                             <input type="text" name="date-arrival" value="24 апреля 2017" id="dz">
-                            <a class="btn" href="#"></a>
+                            <a class="btn" href="#">Выберите дату</a>
                         </div>
                         <div class="search-data">
                             <label for="dv">
                                 Дата выезда:</label>
                             <input type="text" name="date-departure" value="4 июля 2017" id="dv">
-                            <a class="btn" href="#"></a>
+                            <a class="btn" href="#">Выберите дату</a>
                         </div>
                         <div class="search-people">
                             <div class="search-data-min">
                                 <label for="vz">Взрослые:</label>
-                                <a class="minus" href="#">
+                                <a class="minus" href="#">Уменьшить
                                 </a>
                                 <input type="text" name="total-adults" value="2" id="vz">
-                                <a class="plus" href="#"></a>
+                                <a class="plus" href="#">Увеличить</a>
                             </div>
                             <div class="search-data-min">
                                 <label for="ch">
                                     Дети:</label>
-                                <a class="minus" href="#">
+                                <a class="minus" href="#">Уменьшить
                                 </a>
                                 <input type="text" name="total-children" value="0" id="ch">
-                                <a class="plus" href="#">
+                                <a class="plus" href="#">Увеличить
                                 </a>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
             </div>
             <div class="footer-name footer-copyright">
                 <span class="site">website by</span>
-                <a href="https://htmlacademy.ru/intensive/htmlcss"></a>
+                <a href="https://htmlacademy.ru/intensive/htmlcss">HTMLAcademy</a>
             </div>
         </footer>
     </div>
