Исправления перед второй сдачей

--- a/catalogue.html
+++ b/catalogue.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -149,8 +149,7 @@
                         </div>
                     </div>
                     <div class="hotel-rating villas">
-                        <span>Рейтинг: 9.2
-</span>
+                        <span>Рейтинг: 9.2</span>
                     </div>
                 </div>
             </div>
@@ -171,7 +170,7 @@
             <div class="footer-name">
                 <div class="footer-copyright">
                     <span class="site">website by</span>
-                    <a href="https://htmlacademy.ru/intensive/htmlcss"></a>
+                    <a href="https://htmlacademy.ru/intensive/htmlcss">HTMLAcademy</a>
                 </div>
             </div>
         </footer>
